some changes made

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr>
     <header>
         <img src="images/michael.jpg" alt="no images" width="200" >
-        <span> MICHAEL MOMOH</span>
+        <span> MICHAEL KELVIN MOMOH</span>
 
     </header>
     <nav class="navigation">
