site plan update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navigation">
         <a href="index.html" class="active">Home</a>
         <a href="chamber/index.html">Chamber</a>
-        <a href="week01/chamber-site-plan.html">Site Plan</a>
+        <a href="site_plan.html">Site Plan</a>
         <a href="form.html">Form</a>
         
       </nav>
@@ -34,7 +34,7 @@
                     <li><a href="#">Activity 5</a></li>
                     <li><a href="#">Activity 6</a></li>
                     <li><a href="#">Activity 7</a></li>
-      </ul>
+                 </ul>
             
             </section>
 
