--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD 230 - Web Frontend Development ">
+    <meta name="author" content="Michael momoh">
     <title>Michael momoh - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/lager.css">
+    <link rel="stylesheet" href="styles/larger.css" media="(min-width: 768px)">
+    <script src="scripts/getDates.js" defer></script>
 </head>
 <body>
     <hr>
