--- a/site_plan.html
+++ b/site_plan.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD 230 - Web Frontend Development ">
+    <meta name="author" content="Michael momoh">
     <title>michaelson Chamber of Commerce Site Plan</title>
     <link rel="stylesheet" href="styles/site_plan.css">
 </head>
