--- a/index.html
+++ b/index.html
@@ -5,18 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 230 - Web Frontend Development ">
     <meta name="author" content="Michael momoh">
+    <meta property="og:title" content="Your Page Title">
+    <meta property="og:description" content="Page description for social media preview">
+    <meta property="og:image" content="URL_to_your_image">
+    <meta property="og:url" content="https://michealmomoh.github.io/wdd230/">
     <title>Michael momoh - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css" media="(min-width: 768px)">
     <script src="scripts/getDates.js" defer></script>
+    <link rel="icon" href="images/favicon.ico">
+
+
 </head>
 <body>
     <hr>
     <header>
         <img src="images/michael.jpg" alt="no images" width="200" >
+        <link rel="icon" href="images/favicon.ico">
+
         <span> MICHAEL KELVIN MOMOH</span>
+        <button id="darkModeToggle">Dark Mode</button>
 
     </header>
+    <button id="hamburger" aria-label="Menu">&#9776;</button>
     <nav class="navigation">
         <a href="index.html" class="active">Home</a>
         <a href="chamber/index.html">Chamber</a>
@@ -59,6 +70,7 @@
 
     </footer>
     <script src="script/getDates.js"></script>
+    <script src="script/menuToggle.js"></script>
     <hr>
 </body>
 </html>
