--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css" media="(min-width: 768px)">
     <script src="scripts/getDates.js" defer></script>
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="https://icon-library.com/images/favicon-icon/favicon-icon-22.jpg">
 
 
 </head>
