--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,68 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 230 - Web Frontend Development ">
-    <meta name="author" content="Michael momoh">
-    <meta property="og:title" content="chamber of commerce">
-    <meta property="og:description" content="Page description for social media preview">
-    <meta property="og:image" content="URL_to_your_image">
-    <meta property="og:url" content="https://michealmomoh.github.io/wdd230/">
-    <title>Michael momoh - WDD 230 - Web Frontend Development</title>
+    <meta name="description" content="Welcome to the [Your Town] Chamber of Commerce.">
+    <title>[Your Town] Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/larger.css" media="(min-width: 768px)">
-    <script src="scripts/getDates.js" defer></script>
-    <link rel="icon" href="https://icon-library.com/images/favicon-icon/favicon-icon-22.jpg">
-
-
+    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="sierra leone Chamber of Commerce">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="images/og-image.jpg">
+    <meta property="og:url" content="https://michealmomoh.github.io/wdd230/">
 </head>
 <body>
-    <hr>
     <header>
-        <img src="images/chamberofcommerce.jpg" alt="no images" width="200" >
-        <link rel="icon" href="images/favicon.ico">
-
-       <h1>Michaelson Chamber of Commerce </h1>
-
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">HOME </a></li>
-            <li><a href="index.html">CHAMBER</a></li>
-            <li><a href="">FORM</a></li>
-        </ul>
-
-    </nav>
-    <main>
-        <section id="site-name">
-            <h2>michaelson Chamber of Commerce</h2>
-            <p>michaelson Chamber of Commerce. This name was selected because it clearly represents the chamber of commerce serving michaelson.</p>
-            <img src="images/logo.jpg" alt="" width="500" height="500">
-        </section>
-        <section id="site-purpose">
-            <h2>Purpose</h2>
-            <p>The website aims to promote local and international businesses and services, provide community material and  resources, and schedule events to foster economic growth.</p>
-            <p>A chamber of commerce, or board of trade, is a form of business network. For example, a local organization of businesses whose goal is to further the interests of businesses. Business owners in towns and cities form these local societies to advocate on behalf of the business community. Local businesses are members, and they elect a board of directors or executive council to set policy for the chamber. The board or council then hires a president, CEO, or executive director, plus staffing appropriate to size, to run the organization.</p>
-        </section>
-        <img src="images/chamberofcommercepurpose.jpg" alt="" height="500" width="500">
-        <section id="scenarios">
-            <h2>Scenarios</h2>
-            <ul>
-                <li>How can I join the chamber as a member?</li>
-                <form action="contact information">
-                    <label for="contact information"><b>EMAIL</b></label>
-                    <input type="email" placeholder="enter your email"><br>
-                    <label for="phone number "><b>Telephone</b></label>
-                    <input type="tel" placeholder="enter your Telephone"><br>
-                    <label for="text area"><b>textarea </b></label>
-                    <input type="text" placeholder="area_area"><br>
-                    <button>submit</button>
-                </form>
-                <li><b>Who are the current board chair?</b></li>
-                <img src="images/board.jpg" alt="" width="500" height="500">
-                <img src="images/award.jpg" alt="" width="500" height="500">
+        <h1>Welcome to sierra leone  Chamber of Commerce</h1>
+        <nav>
+            <ul class="navigation">
+                <li><a href="index.html">HOME </a></li>
+                <li><a href="index.html">CHAMBER</a></li>
+                <li><a href="">FORM</a></li>
+                
             </ul>
+            <button class="hamburger-menu">☰</button>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <img src="images/logo.jpg" alt="Welcome Image">
+            <div class="hero-text">
+                <h2>Join the Chamber of Commerce Today!</h2>
+                <a href="#" class="cta-button">Join Now</a>
+            </div>
+        </section>
+
+        <section class="events">
+            <h2>Current Events</h2>
+            <p>The website aims to promote local and international businesses and services, provide community material and  resources, and schedule events to foster economic growth.</p>
+        </section>
+
+        <section class="weather">
+            <h2>Weather Update</h2>
+            <p>Current weather in sierra leone </p>
+        </section>
+
+        <section class="spotlights">
+            <h2>Company Spotlights</h2>
+            <div class="spotlight">
+                <h3>michaelson Chamber of Commerce</h3>
+                <p>michaelson Chamber of Commerce. This name was selected because it clearly represents the chamber of commerce serving michaelson.</p>
+            </div>
         </section>
     </main>
+
     <footer>
         <p>
             &copy; <span id="2025"></span> Michael momoh, sierra leone 
@@ -72,8 +62,11 @@
         <p id="lastModified"></p>
 
     </footer>
+
     <script src="scripts/getDates.js"></script>
     <script src="scripts/menuToggle.js"></script>
-    <hr>
+    <script>
+        document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
