--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to the [Your Town] Chamber of Commerce.">
+    <meta name="description" content="Welcome to the sierra leone Chamber of Commerce.">
     <title>[Your Town] Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
