--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         
       </nav>
     <main>
+        <source srcset="images/aba-nigeria-temple-lds" media="(min-width: 600px)">
+        <img src="images/aba-nigeria-temple-lds.webp" alt="Favorite Temple" loading="lazy" class="hero" height="500" width="700">
+        <img src="images/ghana.webp" alt="Favorite Temple" loading="lazy" class="hero" height="500" width="500">
+        <div class="overlay">NIGERIA ABA TEMPLE</div>
+    
+        </picture>
         <h1>WDD 230: Web Frontend Development</h1>
         <div class="card">
             <section>
@@ -60,6 +66,17 @@
                 <p>Weather: <span id="weather-placeholder">78 - sunshine</span></p>
                 <p>Number of visits: <span id="visits-placeholder">30</span></p>
             </section>
+        </div>
+        <div class="map-container">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=YOUR_EMBED_LINK"
+                width="100%"
+                height="300"
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
     </main>
     <footer>
