--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <button id="hamburger" aria-label="Menu">&#9776;</button>
     <nav class="navigation">
         <a href="index.html" class="active">Home</a>
-        <a href="chamber/index.html">Chamber</a>
+        <a href="chamber/discover.html"> Chamber</a>
         <a href="site_plan.html">Site Plan</a>
         <a href="form.html">Form</a>
         
