--- a/site_plan.html
+++ b/site_plan.html
@@ -16,7 +16,7 @@
     <nav>
         <ul>
             <li><a href="index.html">HOME </a></li>
-            <li><a href="chamber/index.html">CHAMBER</a></li>
+            <li><a href="chamber/discover.html">CHAMBER</a></li>
             <li><a href="">FORM</a></li>
         </ul>
     </nav>
