--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -19,6 +19,7 @@
         <nav>
             <ul class="navigation">
             <li><a href="/index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="discover.html">Discover</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="#">Join</a></li>
