--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -33,7 +33,7 @@
         <h1>Thank You for Joining!</h1>
         <section>
             <p>Thank you for submitting your application to the [Your City] Chamber of Commerce. We will review your application and get back to you soon!</p>
-            <a href="/index.html">Return to Home</a>
+            <a href="../index.html">Return to Home</a>
           </section>
                
     </main>
