--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to the sierra leone Chamber of Commerce.">
-    <title>[Your Town] Chamber of Commerce</title>
+    <title>sierra leone Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -18,7 +18,7 @@
         <h1>Welcome to michaelson Chamber of Commerce</h1>
         <nav>
             <ul class="navigation">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="discover.html">Discover</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="join.html">Join</a></li>
