--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -20,7 +20,7 @@
 <body>
     <hr>
     <header>
-        <img src="images/michael.jpg" alt="no images" width="200" >
+        <img src="images/Member.jpg" alt="no images" width="200" >
         <link rel="icon" href="images/favicon.ico">
 
         <span> MICHAEL KELVIN MOMOH</span>
