discover page added

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     <button id="hamburger" aria-label="Menu">&#9776;</button>
     <nav class="navigation">
         <a href="index.html" class="active">Home</a>
-        <a href="chamber/discover.html"> Discover </a>
+        <a href="chamber/chamber.html"> Chamber </a>
         <a href="site_plan.html">Site Plan</a>
+        <a href="chamber/discover.html"></a>
         <a href="form.html">Form</a>
         
       </nav>
