--- a/site_plan.html
+++ b/site_plan.html
@@ -16,8 +16,9 @@
     <nav>
         <ul>
             <li><a href="index.html">HOME </a></li>
+            <li><a href="chamber/chamber.html">Chamber </a></li>
             <li><a href="chamber/discover.html">Discover</a></li>
-            <li><a href="">FORM</a></li>
+            <li><a href="form.html">FORM</a></li>
         </ul>
     </nav>
     <main>
