--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -21,6 +21,7 @@
             <li><a href="../index.html">Home</a></li>
             <li><a href="chamber.html">chamber</a></li>
             <li><a href="discover.html">discover</a></li>
+            <li><a href="directory.html">directory</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="join.html">Join</a></li>
             <li><a href="#">Contact</a></li>
