--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 230 - Web Frontend Development ">
     <meta name="author" content="Michael momoh">
-    <meta property="og:title" content="Your Page Title">
+    <meta property="og:title" content="WWD 230">
     <meta property="og:description" content="Page description for social media preview">
     <meta property="og:image" content="URL_to_your_image">
     <meta property="og:url" content="https://michealmomoh.github.io/wdd230/">
